# traceeshark

./: .env  .gitignore  .gitmodules  CHANGELOG.md  CMakeListsCustom.txt  Makefile  README.md  autoinstall.py  install.sh
.github/: load_plugins.py
.github/ISSUE_TEMPLATE/: BUG.md  DOCUMENTATION.md  FEATURE.md
.github/actions/install-wireshark-headers/: action.yml
.github/actions/install-wireshark-headers-unix/: action.yml
.github/actions/install-wireshark-headers-windows/: action.yml
.github/workflows/: pr.yml  release.yml
docs/: build.md  features.md
extcap/: tracee-capture.bat  tracee-capture.py  tracee-capture.sh  tracee-record.py
extcap/tracee-capture/: new-entrypoint.sh  remote-capture.py
extcap/tracee-capture/presets/: Default  New container
plugins/epan/: common.h  wsjson_extensions.c
plugins/epan/tracee/: CMakeLists.txt  common.c  extractors.c  packet-tracee-json.c  packet-tracee-network-capture.c  packet-tracee.c  postdissectors.c  tracee-common.c  tracee.h
plugins/epan/tracee-event/: CMakeLists.txt  enrichments.c  internal_defs.c  packet-tracee.c  plugin.c  postdissectors.c  process_tree.c  stats.c  tracee.h  wanted_fields.c
plugins/epan/tracee-network-capture/: CMakeLists.txt  packet-tracee-network-capture.c  plugin.c
plugins/wiretap/tracee/: CMakeLists.txt  tracee-json.c
plugins/wiretap/tracee-json/: CMakeLists.txt  tracee-json.c
profiles/Tracee/: colorfilters  dfilter_buttons  dfilter_macros  dfilters  dmacros  preferences
scripts/: build.bat  clean.bat  cmake.bat  dist.bat  install.bat  macos_rpathify.sh  make.bat  make_cmake.bat  make_dist.bat  make_install.bat  setup_env.bat
tools/: merge_pcaps.py
